<resources>
    <string name="app_name">WinterCrabs</string>
    <string name="user">Usuario/Correo electronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="olvidaste">Olvide mi contraseña</string>
    <string name="icon">Icono del proyecto</string>
    <string name="userIcon">Icono de usuario</string>
    <string name="passIcon">Icono de contraseña</string>
    <string name="promociones">Promociones</string>
    <string name="Sitios">A donde ir</string>
    <string name="title_activity_menu">ActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ingresar">ingresar</string>

    <string name="comenzar">Comenzar</string>
    <string name="lugares">Lugares en tendencia</string>
    <string name="paquetes">Paquetes</string>
    <string name="unirse">Unirse a Winter-Crabs</string>
    <string name="compania">Winter Crabs</string>
    <string name="lema">Unidos por un viaje perfecto</string>
</resources>